--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 <body>
     <header>
         <nav>
-            <div class="logo"></div>
-            <div class="list"></div>
+            <div class="logo">
+                <h1>helllo</h1>
+                <h1>helllo</h1>
+                <h1>helllo</h1>
+                <h1>helllo</h1>
+            </div>
+            <div class="list">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident consequatur ea esse eaque nisi veniam impedit minima optio necessitatibus officia suscipit quaerat similique, commodi in ratione deleniti omnis expedita.</p>
+            </div>
         </nav>
     </header>
 </body>
