--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <body>
     <header>
         <nav>
-            <div class="logo"></div>
-            <div class="list"></div>
+            <div class="logo"><a href="#">Logo</a></div>
+            <div class="list">
+                <ul>
+                    <li><a href="#">Bunyod</a></li>
+                    <li><a href="#">Doston</a></li>
+                    <li><a href="#">Sanjar</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 </body>
